- support for connection between english version and internationalized of the same card - support for search by collectors' id